--- a/index.html
+++ b/index.html
@@ -504,6 +504,18 @@
             </li>
           </ul>
         </div>
+        <form class="footer-form">
+          <b class="footer-invitation">Подпишитесь на рассылку</b>
+          <label class="footer-field">
+            <input class="footer-input" type="email" name="email" placeholder="E-mail" />
+          </label>
+          <button class="btn subscribe-btn" type="submit">
+            Подписаться
+            <svg class="footer-send-icon" width="24" height="24">
+              <use href="./images/icon.svg#icon-send"></use>
+            </svg>
+          </button>
+        </form>
       </div>
     </footer>
 
@@ -562,7 +574,7 @@
           </span>
         </label>
 
-        <button type="button" class="btn modal-submit-btn">Отправить</button>
+        <button type="submit" class="btn modal-submit-btn">Отправить</button>
       </div>
     </div>
     <script src="./js/modal.js"></script>
