--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
         <h2 class="modal-title">Оставьте свои данные, мы вам перезвоним</h2>
         <form class="modal-form">
           <label class="modal-field"
-            >Имя
+            ><span class="label-name">Имя</span>
             <span class="modal-input-thumb">
               <svg class="modal-field-icon" width="18" height="18">
                 <use href="./images/icon.svg#modal-icon-person"></use>
@@ -539,7 +539,7 @@
             </span>
           </label>
           <label class="modal-field"
-            >Телефон
+            ><span class="label-name">Телефон</span>
             <span class="modal-input-thumb">
               <svg class="modal-field-icon" width="18" height="18">
                 <use href="./images/icon.svg#modal-icon-phone-black"></use>
@@ -548,7 +548,7 @@
             </span>
           </label>
           <label class="modal-field"
-            >Почта
+            ><span class="label-name">Почта</span>
             <span class="modal-input-thumb">
               <svg class="modal-field-icon" width="18" height="18">
                 <use href="./images/icon.svg#modal-icon-email"></use>
@@ -557,11 +557,8 @@
             </span>
           </label>
           <label class="modal-field"
-            >Комментарий<textarea
-              class="modal-input"
-              name="comment"
-              placeholder="Введите текст"
-            ></textarea>
+            ><span class="label-name">Комментарий</span
+            ><textarea class="modal-input" name="comment" placeholder="Введите текст"></textarea>
           </label>
         </form>
 
