--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
               <svg class="modal-field-icon" width="18" height="18">
                 <use href="./images/icon.svg#modal-icon-email"></use>
               </svg>
-              <input class="modal-input" type="email" name="email" autocomplete="off" />
+              <input class="modal-input" type="email" name="mail" autocomplete="off" />
             </span>
           </label>
           <label class="modal-field"
